# azctx

./: .gitignore  LICENSE  README.md  RELEASES.md  azctx.spec  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
specs/001-azure-context-switcher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-azure-context-switcher/checklists/: requirements.md
specs/001-azure-context-switcher/contracts/: cli-contract.md  github-actions-release.yml
specs/002-switch-by-id/: IMPLEMENTATION-COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-switch-by-id/checklists/: requirements.md
specs/002-switch-by-id/contracts/: function-contracts.md
src/: __init__.py  cli.py
src/models/: __init__.py  context.py
src/services/: __init__.py  azure_cli.py  context_manager.py  storage.py
src/utils/: __init__.py  console.py  errors.py
